--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
   background-size: cover;
-  color: white;
+  color: yellow;
   text-align: center;
 }
 
