--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,7 +23,7 @@ a {
 
 .top-wrapper {
   padding: 180px 0 100px 0;
-  background-image: url(https://prog-8.com/images/html/advanced/top_en.png);
+  background-image: url(https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-01%20at%2017.55.46.jpeg);
   background-size: cover;
   color: yellow;
   text-align: center;
