--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-01%20at%2017.55.46.jpeg);
   background-size: cover;
-  color: yellow;
+  color: white;
   text-align: center;
 }
 
