--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-01%20at%2017.55.46.jpeg);
   background-size: cover;
-  color: purple;
+  color: grey;
   text-align: center;
 }
 
@@ -33,7 +33,7 @@ a {
   opacity: 0.7;
   font-size: 45px;
   letter-spacing: 5px;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .top-wrapper p {
