--- a/stylesheet.css
+++ b/stylesheet.css
@@ -170,6 +170,13 @@ header {
   font-size: 15px;
   color: #b3aeb5;
 }
+.lesson-wrapperr {
+  padding-bottom: 80px;
+  padding-left: 5%;
+  padding-right: 5%;
+  background-color: #f7f7f7;
+  text-align: center;
+}
 
 .heading h3 {
   font-weight: normal;
