--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ a {
   padding: 180px 0 100px 0;
   background-image: url(https://raw.githubusercontent.com/Gilardiii/Gilardiii.github.io/main/WhatsApp%20Image%202022-02-01%20at%2017.55.46.jpeg);
   background-size: cover;
-  color: grey;
+  color: black;
   text-align: center;
 }
 
@@ -43,7 +43,7 @@ a {
 
 .btn-wrapper {
   text-align: center;
-  margin: 20px 0;
+  margin: 150px 0;
 }
 
 .btn-wrapper p {
@@ -86,17 +86,17 @@ a {
 }
 
 header {
-  height: 65px;
+  height: 60px;
   width: 100%;
-  background-color: rgba(34, 49, 52, 0.9);
+  background-color: rgb(128,128,128);
   position :fixed;
   top: 0;
   z-index: 10;
 }
 
 .logo {
-  width: 124px;
-  margin-top: 20px;
+  width: 176px;
+  margin-top: 15px;
 }
 
 .header-left {
@@ -139,7 +139,7 @@ header {
 
 .heading {
   padding-top: 80px;
-  padding-bottom: 50px;
+  padding-bottom: 60px;
   color: #5f5d60;
 }
 
@@ -170,14 +170,16 @@ header {
   font-size: 15px;
   color: #b3aeb5;
 }
-.lesson-wrapperr {
-  padding-bottom: 80px;
-  padding-left: 5%;
-  padding-right: 5%;
-  background-color: #f7f7f7;
+
+.text-contents2 {
+  width: 260%;
+  display: inline-block;
+  margin-top: 45px;
+  font-size: 30px;
+  color: #b3aeb5;
+  padding-right: 50px;
   text-align: center;
 }
-
 .heading h3 {
   font-weight: normal;
 }
@@ -202,7 +204,7 @@ header {
 }
 
 footer img {
-  width: 125px;
+  width: 225px;
 }
 
 footer p {
