--- a/stylesheet.css
+++ b/stylesheet.css
@@ -181,6 +181,10 @@ header {
   padding-right: 50px;
   text-align: center;
 }
+
+.lesson2 {
+  float: center;
+}
 .heading h3 {
   font-weight: normal;
 }
@@ -210,10 +214,10 @@ footer img {
 
 footer p {
   color: #b3aeb5;
-  font-size: 12px;
+  font-size: 13px;
 }
 
 footer {
-  padding-top: 30px;
+  padding-top: 5px;
   padding-bottom: 20px;
 }
